Alteração no cabeçalho

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
 
-        <nav id="navigation" class="container">
+        <nav class="container">
             <h3>DSSuperFit</h3>
             <div class="social-media">
                 <img src="img/instagram.png" alt="Logo Instagram" />
